--- a/index.html
+++ b/index.html
@@ -176,34 +176,36 @@
                         otwarte na negocjacje, aby sprostać Twoim indywidualnym potrzebom oraz oczekiwaniom odnośnie
                         zakresu projektu. Nasz doświadczony zespół z przyjemnością udzieli Ci wszelkich niezbędnych
                         informacji oraz omówi szczegóły Twojego zamówienia. Nie wahaj się skontaktować z nami,
-                        abyśmy
-                        mogli stworzyć dla Ciebie spersonalizowaną ofertę, dopasowaną do Twoich preferencji i
-                        budżetu.
-                        Jesteśmy tu, aby sprawić, że Twoja wyjątkowa uroczystość stanie się jeszcze bardziej
-                        wyjątkowa,
-                        dbając o każdy detal i dostosowując się do Twoich potrzeb.</p>
+                        abyśmy mogli stworzyć dla Ciebie spersonalizowaną ofertę, dopasowaną do Twoich preferencji i
+                        budżetu. Jesteśmy tu, aby sprawić, że Twoja wyjątkowa uroczystość stanie się jeszcze bardziej
+                        wyjątkowa, dbając o każdy detal i dostosowując się do Twoich potrzeb.</p>
                     <table>
                         <tr>
                             <th>Usługa</th>
                             <th>Cena</th>
                         </tr>
                         <tr>
-                            <td>Bukiet ślubny</td>
-                            <td>500 zł</td>
+                            <td>Bukiet ślubny Panny Młodej</td>
+                            <td>od 180 zł</td>
                         </tr>
                         <tr>
                             <td>Dekoracja kościoła</td>
-                            <td>3000 zł</td>
+                            <td>od 800 zł</td>
                         </tr>
                         <tr>
                             <td>Dekoracja sali weselnej</td>
-                            <td>3000 zł</td>
+                            <td>od 1300 zł</td>
                         </tr>
                         <tr>
-                            <td>Kompozycja na stół komunijny</td>
-                            <td>3000 zł</td>
+                            <td>Dekoracja samochodów</td>
+                            <td>od 150 zł</td>
+                        </tr>
+                        <tr>
+                            <td>Wianuszki z naturalnych kwiatów</td>
+                            <td>od 50 zł</td>
                         </tr>
                     </table>
+                     <p class="light">Przedstawiony cennik dekoracji ślubnych jest orientacyjny.</p>
                 </div>
             </div>
         </div>
