--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
                             <td>od 180 zł</td>
                         </tr>
                         <tr>
-                            <td>Dekoracja kościoła</td>
-                            <td>od 800 zł</td>
+                            <td>Dekoracja ślubna kościoła</td>
+                            <td>od 1500 zł</td>
                         </tr>
                         <tr>
                             <td>Dekoracja sali weselnej</td>
@@ -204,8 +204,12 @@
                             <td>Wianuszki z naturalnych kwiatów</td>
                             <td>od 50 zł</td>
                         </tr>
+                        <tr>
+                            <td>Dekoracja komunijna kościoła</td>
+                            <td>od 1000 zł</td>
+                        </tr>
                     </table>
-                     <p class="light">Przedstawiony cennik dekoracji ślubnych jest orientacyjny.</p>
+                     <p class="light">Przedstawiony cennik dekoracji jest orientacyjny.</p>
                 </div>
             </div>
         </div>
