--- a/index.html
+++ b/index.html
@@ -131,29 +131,118 @@
             </div>
             <hr color="#70547C">
             <div id="carousel-1">
-                <h5 class="center-align welcome" style="font-family: 'DM Sans';text-transform: capitalize;">Wesele
-                    Glamour</h5>
+                <h5 class="center-align welcome" style="font-family: 'DM Sans'">Dekoracja
+                    Sali Weselnej, Florystyka Pary Młodej i Świadków</h5>
                 <div id="photos">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/bordowe/1.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/bordowe/2.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/bordowe/3.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/bordowe/4.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/bordowe/6.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/bordowe/7.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/1.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/2.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/3.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/4.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/5.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/6.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/7.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/8.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/9.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/10.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/11.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/12.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/13.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/14.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/15.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/16.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/17.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/18.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/19.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/20.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/21.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/22.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/23.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/24.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/25.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/26.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/27.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/28.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/29.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/30.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/31.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/32.jpeg">
                 </div>
             </div>
             <hr color="#70547C">
             <div id="carousel-2">
-                <h5 class="center-align welcome" style="font-family: 'DM Sans';text-transform: capitalize">Wesele
-                    Słonecznikowe</h5>
+                <h5 class="center-align welcome" style="font-family: 'DM Sans'">Dekoracja
+                    Kościoła na Uroczystość Pierwszej Komunii Świetej</h5>
                 <div id="photos">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/zotle/1.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/zotle/2.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/zotle/3.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/zotle/4.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/zotle/5.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/zotle/6.jpeg">
-                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/zotle/7.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/1.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/2.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/3.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/4.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/5.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/6.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/7.jpeg">
+                </div>
+            </div>
+            <hr color="#70547C">
+            <div id="carousel-2">
+                <h5 class="center-align welcome" style="font-family: 'DM Sans'">Wianuszki Komunijne</h5>
+                <div id="photos">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/1.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/2.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/3.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/4.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/5.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/6.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/7.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/8.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/9.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/10.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/11.jpeg">
+                </div>
+            </div>
+            <hr color="#70547C">
+            <div id="carousel-2">
+                <h5 class="center-align welcome" style="font-family: 'DM Sans'">Flower Boxsy,
+                    Kosze Kwiatowe z Upominkami, Wieczne Róże w Szkle</h5>
+                <div id="photos">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/1.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/2.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/3.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/4.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/5.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/6.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/7.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/8.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/9.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/10.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/11.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/12.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/13.jpeg">
+                </div>
+            </div>
+            <hr color="#70547C">
+            <div id="carousel-2">
+                <h5 class="center-align welcome" style="font-family: 'DM Sans'">Florystyka
+                    Funeralna, Kompozycje Nagrobkowe i Pogrzebowe</h5>
+                <div id="photos">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/1.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/2.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/3.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/4.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/5.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/6.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/7.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/8.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/9.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/10.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/11.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/12.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/13.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/14.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/15.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/16.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/17.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/18.jpeg">
+                    <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/19.jpeg">
                 </div>
             </div>
 
