Images display fixed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div id="img_here"></div>
     </div>
     <div class="navbar-fixed" id="o-nas">
-        <nav class="white" role="navigation">
+        <nav class="white" role="navigation" id="navigation-bar">
             <div class="nav-wrapper container">
                 <a id="logo-container" href="#" class="brand-logo"
                     style="font-family: 'Playlist', sans-serif;text-transform:capitalize; color: #70547C;">Witaj
@@ -133,7 +133,7 @@
             <div id="carousel-1">
                 <h5 class="center-align welcome" style="font-family: 'DM Sans'">Dekoracja
                     Sali Weselnej, Florystyka Pary Młodej i Świadków</h5>
-                <div id="photos">
+                <div id="photos" class="photo-container">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/1.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/2.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/wesela/3.jpeg">
@@ -172,7 +172,7 @@
             <div id="carousel-2">
                 <h5 class="center-align welcome" style="font-family: 'DM Sans'">Dekoracja
                     Kościoła na Uroczystość Pierwszej Komunii Świetej</h5>
-                <div id="photos">
+                <div id="photos" class="photo-container">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/1.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/2.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/komunie/3.jpeg">
@@ -185,7 +185,7 @@
             <hr color="#70547C">
             <div id="carousel-2">
                 <h5 class="center-align welcome" style="font-family: 'DM Sans'">Wianuszki Komunijne</h5>
-                <div id="photos">
+                <div id="photos" class="photo-container">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/1.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/2.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/wianki/3.jpeg">
@@ -203,7 +203,7 @@
             <div id="carousel-2">
                 <h5 class="center-align welcome" style="font-family: 'DM Sans'">Flower Boxsy,
                     Kosze Kwiatowe z Upominkami, Wieczne Róże w Szkle</h5>
-                <div id="photos">
+                <div id="photos" class="photo-container">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/1.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/2.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/boxy/3.jpeg">
@@ -223,7 +223,7 @@
             <div id="carousel-2">
                 <h5 class="center-align welcome" style="font-family: 'DM Sans'">Florystyka
                     Funeralna, Kompozycje Nagrobkowe i Pogrzebowe</h5>
-                <div id="photos">
+                <div id="photos" class="photo-container">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/1.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/2.jpeg">
                     <img onclick="magnify($(this).attr('src'))" src="assets/images/pogrzeby/3.jpeg">
