Map width fixed

--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                         pod wskazanym adresem:</p>
                     <div class="row contact-row">
                         <div class="col-1">
-                            <iframe
+                            <iframe class="map"
                                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2339.4641793127116!2d22.9391475!3d54.1009749!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46e103988f0ae257%3A0xce48b0c97dfb0cb3!2sKwiaciarnia%20Witaj%20Bratku%20pracownia%20florystyczna!5e0!3m2!1spl!2sno!4v1710696862132!5m2!1spl!2sno"
                                 width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"
                                 referrerpolicy="no-referrer-when-downgrade"></iframe>
