--- a/index.html
+++ b/index.html
@@ -179,6 +179,13 @@
                     <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/5.jpeg">
                     <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/6.jpeg">
                     <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/7.jpeg">
+                    <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/8.jpeg">
+                    <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/9.jpeg">
+                    <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/10.jpeg">
+                    <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/11.jpeg">
+                    <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/12.jpeg">
+                    <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/13.jpeg">
+                    <img onclick="magnify($(this).attr('src'), 'photos-2')" src="assets/images/komunie/14.jpeg">
                 </div>
             </div>
             <hr color="#70547C">
